# mongoengine

./: .arcconfig  .gitignore  .gitlab-ci.yml  .install_mongodb_on_travis.sh  .landscape.yml  .policy.yml  .pre-commit-config.yaml  .readthedocs.yml  .snyk  .travis.yml  .travis_.yml  ASYNC_AGGREGATE_FIX.md  ASYNC_SELECT_RELATED_FIX.md  AUTHORS  CLAUDE.md  CODEOWNERS  CONTRIBUTING.rst  DIFFERENCES.md  Dockerfile  LICENSE  MANIFEST.in  PROGRESS.md  README.md  README.rst  README_MONGOENGINE.rst  benchmark.py  docker-compose-mongo-init.js  docker-compose.yml  entrypoint.sh  gen.py  mypy.ini  pylsp-mypy.cfg  pymongo-async-tutorial.md  pymongo-gridfs-async-tutorial.md  pyproject.toml  python-mongoengine.spec  requirements-dev.txt  requirements-lint.txt  requirements.txt  setup.cfg  (+6 more)
.github/workflows/: github-actions.yml  install_ci_python_dep.sh  install_ci_python_typing_deps.sh  install_mongo.sh  install_mongosh.sh  release.yml  start_mongo.sh
benchmarks/: test_basic_doc_ops.py  test_inserts.py  test_save_with_indexes.py
bson-stubs/: codec_options.pyi  errors.pyi  json_util.pyi  objectid.pyi  timestamp.py
django-mongoengine-stubs/: fields.pyi
django_model_changes-stubs/: __init__.pyi
django_mongoengine-stubs/: __init__.pyi  document.pyi  fields.pyi  queryset.pyi
django_mongoengine-stubs/fields/: __init__.pyi
docs/: Makefile  apireference.rst  changelog.rst  conf.py  django.rst  faq.rst  index.rst  requirements.txt  tutorial.rst  upgrade.rst  userguide.rst
docs/_templates/: layout.html
docs/code/: tumblelog.py
docs/guide/: async-gridfs.rst  async-support.rst  connecting.rst  defining-documents.rst  document-instances.rst  gridfs.rst  index.rst  installing.rst  logging-monitoring.rst  migration.rst  mongomock.rst  querying.rst  signals.rst  text-indexes.rst  validation.rst
mongoengine/: __init__.py  __init__.pyi  _typing.py  async_context_managers.py  async_iterators.py  async_utils.py  base.py  collection.py  common.py  connection.py  connection.pyi  connections_manager.py  context_managers.py  dereference.py  document.py  document.pyi  errors.py  errors.pyi  fields.py  fields.pyi  mongodb_support.py  mypy.ini  no_conflict_doc.py  pymongo_greenlet.py  pymongo_support.py  python3_support.py  python_support.py  queryset.py  read_preference.py  roles.py  session.py  sessions.py  signals.py  signals.pyi  tests.py  timer.py
mongoengine/asynchronous/: __init__.py  connection.py
mongoengine/base/: __init__.py  common.py  datastructures.py  document.py  document.pyi  fields.py  fields.pyi  metaclasses.py  proxy.py  utils.py
mongoengine/django/: auth.py  contenttypes.py  sessions.py  shortcuts.py  storage.py  tests.py
mongoengine/fields/: __init__.py  boolean.py  enum.py  exceptions.py  sequence.py  uuid.py
mongoengine/queryset/: __init__.py  __init__.pyi  base.py  field_list.py  manager.py  manager.pyi  queryset.py  queryset.pyi  transform.py  utils.py  visitor.py  visitor.pyi
mongoengine/registry/: __init__.py  collection.py
mongoengine/synchronous/: __init__.py  connection.py
mongomap/: __init__.py  base.py  collection.py  connection.py  document.py  fields.py
pymongo-stubs/: bulk.pyi  change_stream.pyi  client_session.pyi  collation.pyi  monitoring.pyi  operations.pyi  read_concern.pyi  read_preferences.pyi  write_concern.pyi
scripts/arcanist/: __phutil_library_init__.php  __phutil_library_map__.php
tests/: __init__.py  benchmark.py  collection.py  conftest.py  connection.py  connnection.py  custom_queries.py  dereference.py  django_tests.py  doc_versioning.py  document.py  dynamic_document.py  fields.py  filter_orphan.py  fixtures.py  queryset.py  replicaset_connection.py  signals.py  test_all_warnings.py  test_async_aggregation.py  test_async_cascade.py  test_async_connection.py  test_async_context_managers.py  test_async_document.py  test_async_gridfs.py  test_async_integration.py  test_async_queryset.py  test_async_reference_field.py  test_async_select_related.py  test_async_transactions.py  test_bugfix.py  test_changelog_consistency.py  test_ci.py  test_common.py  test_connection.py  test_connection_mongomock.py  test_context_managers.py  test_datastructures.py  test_dereference.py  test_django.py  (+17 more)
tests/all_warnings/: __init__.py  test_warnings.py
tests/async/: test_connection.py
tests/asynchronous/: fixtures.py  test_connection.py  test_context_managers.py  test_dereference.py  test_replicaset_connection.py  test_signals.py  utils.py
tests/check_fields_retrieved/: test_field_is_not_retrieved_exception.py
tests/connections/: test_connection.py  test_replicaset_connection.py
tests/document/: __init__.py  abstract_fields.py  class_methods.py  db_fields.py  delta.py  dynamic.py  indexes.py  inheritance.py  instance.py  json_serialisation.py  test_class_methods.py  test_delta.py  test_dynamic.py  test_indexes.py  test_inheritance.py  test_instance.py  test_json_serialisation.py  test_timeseries_collection.py  test_validation.py  validation.py
tests/fields/: __init__.py  fields.py  file.py  file_tests.py  geo.py  test_binary_field.py  test_boolean_field.py  test_cached_reference_field.py  test_complex_base_field.py  test_complex_datetime_field.py  test_date_field.py  test_datetime_field.py  test_decimal128_field.py  test_decimal_field.py  test_dict_field.py  test_email_field.py  test_embedded_document_field.py  test_enum_field.py  test_enum_fields.py  test_fields.py  test_file_field.py  test_float_field.py  test_generic_reference_field.py  test_geo_fields.py  test_int_field.py  test_lazy_reference_field.py  test_long_field.py  (+9 more)
(+223 files in other folders)
